--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-JZPHEF7YXK"
+      src="https://www.googletagmanager.com/gtag/js?id=GTM-NMFDR4MQ"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
