index.html Güncellemesi

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-JZPHEF7YXK");
+      gtag("config", "GTM-NMFDR4MQ");
     </script>
 
     <!-- CAPTCHA GOOGLE -->
