--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
     document.getElementById('iletisim-button').disabled = false;
   }
 
-  document.querySelector('#iletisim').addEventListener('submit', function (e) {
+  document.querySelector('#contact-form').addEventListener('submit', function (e) {
     e.preventDefault();
     const hcaptchaResponse = hcaptcha.getResponse();
 
