index.html Güncellemesi

--- a/index.html
+++ b/index.html
@@ -494,14 +494,14 @@
                 data-error-callback="reVerify"
               ></div>
               <button
-                class="contact__button button"
-                id="contact-button"
+                class="iletisim__button button"
+                id="iletisim-button"
                 type="submit"
                 disabled
               >
-                <i class="ri-send-plane-line"></i> Send Message
+                <i class="ri-send-plane-line"></i> Mesaj Gönder
               </button>
-              <p class="contact__message" id="contact-message"></p>
+              <p class="iletisim__message" id="iletisim-message"></p>
             </form>
           </div>
 
