--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 <div class="iletisim__box">
                   <input
                     type="text"
-                    name="user_name" class="iletisim__input"
+                    name="adsoyad" class="iletisim__input"
                     id="name"
                     placeholder="Ad soyad giriniz."
                     required/>
@@ -457,7 +457,7 @@
                 <div class="iletisim__box">
                   <input
                     type="email"
-                    name="user_email" class="iletisim__input"
+                    name="eposta" class="iletisim__input"
                     id="email"
                     placeholder="E-Posta Adresiniz"
                     required/>
@@ -470,7 +470,7 @@
               <div class="iletisim__box">
                 <input
                   type="text"
-                  name="user_subject" class="iletisim__input"
+                  name="konu" class="iletisim__input"
                   id="subject"
                   placeholder="Lütfen mesaj konusunu giriniz."
                   required/>
@@ -480,7 +480,7 @@
               <div class="iletisim__box iletisim__area">
                 <textarea
                   name="user_message"
-                  id="message" class="iletisim__input"
+                  id="mesaj" class="iletisim__input"
                   placeholder="Lütfen mesajınızı giriniz."
                   required></textarea>
                 <label for="message" class="iletisim__label"> Mesajınız </label>
