index.html Güncellemesi

--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
 
               <div class="iletisim__box iletisim__area">
                 <textarea
-                  name="user_message"
-                  id="mesaj" class="iletisim__input"
+                  name="mesaj"
+                  id="message" class="iletisim__input"
                   placeholder="Lütfen mesajınızı giriniz."
                   required></textarea>
                 <label for="message" class="iletisim__label"> Mesajınız </label>
