index.html Güncellemesi

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- SEO -->
     <meta
       name="keywords"
       content="Mustafa Arda Düşova, mdusova, Yazılım, Grafik Tasarım, E-Ticaret & Pazarlama, mdusova.com, Mustafa Arda,"
@@ -55,7 +54,6 @@
 
     <title>Mustafa Arda Düşova</title>
 
-    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=GTM-NMFDR4MQ"
@@ -70,7 +68,6 @@
       gtag("config", "GTM-NMFDR4MQ");
     </script>
 
-    <!-- CAPTCHA GOOGLE -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script>
       function enableBtn(token) {
