--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
               style="border-radius: 12px"
               src="https://open.spotify.com/embed/playlist/5ns3e4nzwbark1roxYSWnf?utm_source=generator"
               width="100%"
+              height="387"
               frameborder="0"
               allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
               loading="lazy"
