--- a/index.html
+++ b/index.html
@@ -391,15 +391,15 @@
         </p>
         <div class="music__container container grid">
           <div class="music__box" id="music-box-left">
-            <img
+            <iframe
               style="border-radius: 12px"
-              src="https://spotify.mdusova.com/api?user=31e4wu2ua42rf5qvqaukgjwgz7tu&width=544&count=6"
+              src="https://spotify.mdusova.com/api?user=31e4wu2ua42rf5qvqaukgjwgz7tu&width=400&count=5"
               width="100%"
               height="410"
               frameborder="0"
               allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
               loading="lazy"
-            />
+            ></iframe>
           </div>
           <div class="music__box" id="music-box-right">
             <iframe
