--- a/index.html
+++ b/index.html
@@ -387,26 +387,36 @@
         </h2>
         <p class="music__title-sub">
           Müzik dinlemeyi seviyorum, rahatlamama ve işime odaklanmama yardımcı oluyor. <br>
-          İşte kendi yapmış olduğum <a href="https://spotify.mdusova.com/" target="_blank">Spotify Son Dinlediğim Müzikler</a> projem ve en sevdiğim şarkılardan oluşan oynatma listem.
+          İşte en sevdiğim şarkılardan oluşan oynatma listelerim.
         </p>
         <div class="music__container container grid">
           <div class="music__box" id="music-box-left">
             <iframe
-              src="https://spotify.mdusova.com/api?user=31e4wu2ua42rf5qvqaukgjwgz7tu&width=540&count=6"
+              title="Playlist Cá Hồi Hoang"
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/playlist/5aC4z5UCG4ePTixtSdOzmb?utm_source=generator"
+              width="100%"
+              height="410"
+              frameborder="0"
               allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
               loading="lazy"
             ></iframe>
           </div>
           <div class="music__box" id="music-box-right">
             <iframe
-              title="for designers Oynatma Listem"
+              title="for designers. Oynatma Listem"
+              style="border-radius: 12px"
               src="https://open.spotify.com/embed/playlist/5ns3e4nzwbark1roxYSWnf?utm_source=generator"
+              width="100%"
+              height="410"
+              frameborder="0"
               allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
               loading="lazy"
             ></iframe>
           </div>
         </div>
       </section>
+
 
       <!--==================== İLETİŞİM BÖLÜMÜ ====================-->
       <section class="iletisim section" id="iletisim">
