--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
           --header-height: 3.5rem;
 
           --first-color: #FC3D03;
-          --text-color: hsl(38, 8%, 8%);
+          --text-color: #ffffff;
         
           --body-font: 'Space Grotesk', sans-serif;
           --biggest-font-size: 2.375rem;
