--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
         :root {
           --header-height: 3.5rem;
 
-          --first-color: #FC3D03;
-          --text-color: #ffffff;
+          --first-color: hsl(0, 0%, 87%);
+          --text-color: hsl(0, 0%, 0%);
         
           --body-font: 'Space Grotesk', sans-serif;
           --biggest-font-size: 2.375rem;
