--- a/404.html
+++ b/404.html
@@ -298,14 +298,14 @@
     <body>
         <header class="header">
             <nav class="nav container">
-                <a href="https://mdusova.com/" class="nav__logo">
+                <a href="https://mdusova.com/#" class="nav__logo">
                     Mustafa Arda Düşova
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="https://mdusova.com/" class="nav__link">Anasayfa</a>
+                            <a href="https://mdusova.com/#" class="nav__link">Anasayfa</a>
                         </li>
                         <li class="nav__item">
                             <a href="https://mdusova.com/#hakkimda" class="nav__link">Hakkımda</a>
@@ -338,7 +338,7 @@
                         <p class="home__description">
                             Görünüşe göre böyle bir sayfa yok veya taşınmış. URL'yi kontrol edip tekrar dener misin? Bir yanlışlık olduğunu düşünüyorsanız lütfen bize bildirmekten çekinmeyin.
                         </p>
-                        <a href="https://mdusova.com/" class="home__button">
+                        <a href="https://mdusova.com/#" class="home__button">
                             Anasayfa'ya Dön
                         </a>
                     </div>
