--- a/404.html
+++ b/404.html
@@ -182,6 +182,7 @@
 
         .home__button:hover {
           box-shadow: 0 4px 12px hsla(38, 69%, 8%, .2);
+          color: #fff;
         }
 
         .home__img img {
