--- a/404.html
+++ b/404.html
@@ -345,7 +345,7 @@
                     </div>
 
                     <div class="home__img">
-                        <img src="dosyalar/resimler/hayalet.png" alt="">
+                        <img src="https://mdusova.com/dosyalar/resimler/hayalet.png" alt="Hayalet Resmi">
                         <div class="home__shadow"></div>
                     </div>
                 </div>
