--- a/404.html
+++ b/404.html
@@ -358,7 +358,7 @@
             </section>
         </main>
 
-        <script src="assets/js/scrollreveal.min.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="https://mdusova.com/dosyalar/js/404scrollreveal.min.js"></script>
+        <script src="https://mdusova.com/dosyalar/js/404.js"></script>
     </body>
 </html>
