--- a/404.html
+++ b/404.html
@@ -304,6 +304,13 @@
             zoom: 3.1;
           }
         }
+
+        @media screen and (max-width: 768px) {
+            .home__img img {
+                width: 150px; /* İstediğin boyut */
+                height: auto; /* Oranı koru */
+            }
+        }
         </style>
         
         <title>404 Sayfa Bulunamadı! - mdusova.com</title>
