--- a/404.html
+++ b/404.html
@@ -381,9 +381,7 @@
             </div>
 
                 <footer class="home__footer">
-                    <span>Copyright © 2024 <a href="https://mdusova.com" target="_blank">Mustafa Arda Düşova</a> - Tüm Hakları Saklıdır.</span>
-                    <span>|</span>
-                    <span><a href="mailto:info@mdusova.com" target="_blank">info@mdusova.com</a></span>
+                    <span>Copyright © 2024 <a href="https://mdusova.com" target="_blank">Mustafa Arda Düşova</a></span>
                 </footer>
             </section>
         </main>
