--- a/404.html
+++ b/404.html
@@ -372,7 +372,7 @@
                     <span class="home__subtitle">Hata Kodu: 404</span>
                     <h1 class="home__title">Hey Dostum!</h1>
                     <p class="home__description">
-                        Görünüşe göre böyle bir sayfa yok veya taşınmış. URL'yi kontrol edip tekrar dener misin? Bir yanlışlık olduğunu düşünüyorsanız lütfen bize bildirmekten çekinmeyin.
+                        Görünüşe göre böyle bir sayfa yok veya taşınmış. <br>URL'yi kontrol edip tekrar dener misin? <br>Bir yanlışlık olduğunu düşünüyorsanız lütfen bize bildirmekten çekinmeyin.
                     </p>
                     <a href="https://mdusova.com/#" class="home__button">
                         Anasayfa'ya Dön
