index.html Güncellemesi

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
                 <i class="ri-download-2-line"></i> CV Görüntüle
               </a>
             </li>
+            
+
+          
           </ul>
           <!-- KAPATMA BUTONU -->
           <div class="nav__close" id="nav-close">
@@ -137,6 +140,12 @@
           <div class="nav__toggle" id="nav-toggle">
             <i class="ri-menu-4-line"></i>
           </div>
+          <!-- DİL BUTONU -->
+            <div class="lang-switch">
+              <i class="ri-global-line">
+                <a href="https://mdusova.com/en" class="nav__link">EN</a>
+              </i>
+            </div>
         </div>
       </nav>
     </header>
