İngilizce Dil Desteği Ekleme

--- a/en.html
+++ b/en.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="keywords"
-      content="Mustafa Arda Dusova, mdusova, Software, Graphic Design, E-Commerce & Marketing, mdusova.com, Mustafa Arda,"
+      content="Mustafa Arda Düşova, mdusova, Software, Graphic Design, E-Commerce & Marketing, mdusova.com, Mustafa Arda,"
     />
 
     <meta
       name="description"
-      content="I am Mustafa Arda Dusova, I grew up with computers. I have developed a deep passion for software, graphic design and e-commerce. I help brands stand out in the digital world by creating user-friendly software and impressive designs. I develop e-commerce platforms and create digital marketing strategies. I contribute to the growth of brands by providing technical and creative solutions in every project."
+      content="I am Mustafa Arda Düşova, I grew up with computers. I have developed a deep passion for software, graphic design and e-commerce. I help brands stand out in the digital world by creating user-friendly software and impressive designs. I develop e-commerce platforms and create digital marketing strategies. I contribute to the growth of brands by providing technical and creative solutions in every project."
     />
 
     <meta property="og:url" content="https://www.mdusova.com/" />
 
-    <meta property="og:title" content="Mustafa Arda Dusova - Full-Stack Developer, E-Commerce & Marketing, Graphic Designer" />
+    <meta property="og:title" content="Mustafa Arda Düşova - Full-Stack Developer, E-Commerce & Marketing, Graphic Designer" />
 
     <meta
       property="og:image"
@@ -24,11 +24,11 @@
 
     <meta property="og:type" content="website" />
 
-    <meta property="og:site_name" content="Mustafa Arda Dusova" />
+    <meta property="og:site_name" content="Mustafa Arda Düşova" />
 
     <meta
       property="og:description"
-      content="I am Mustafa Arda Dusova, I grew up with computers. I have developed a deep passion for software, graphic design and e-commerce. I help brands stand out in the digital world by creating user-friendly software and impressive designs. I develop e-commerce platforms and create digital marketing strategies. I contribute to the growth of brands by providing technical and creative solutions in every project."
+      content="I am Mustafa Arda Düşova, I grew up with computers. I have developed a deep passion for software, graphic design and e-commerce. I help brands stand out in the digital world by creating user-friendly software and impressive designs. I develop e-commerce platforms and create digital marketing strategies. I contribute to the growth of brands by providing technical and creative solutions in every project."
     />
 
     <meta property="og:locale" content="en_US" />
@@ -52,7 +52,7 @@
     <link rel="stylesheet" href="https://mdusova.com/dosyalar/css/enstyles.css" />
     <link rel="stylesheet" href="https://mdusova.com/dosyalar/css/enmediaqueries.css" />
 
-    <title>Mustafa Arda Dusova</title>
+    <title>Mustafa Arda Düşova</title>
 
     <script
       async
@@ -93,13 +93,13 @@
       <nav class="nav container">
         <a href="#" class="nav__logo">
           <span class="nav__logo-circle">MA</span>
-          <span class="nav__logo-name">Mustafa Arda Dusova</span>
+          <span class="nav__logo-name">Mustafa Arda Düşova</span>
         </a>
 
         <div class="nav__menu" id="nav-menu">
           <span class="nav__title">Menu</span>
 
-          <h3 class="nav__name">Mustafa Arda Dusova</h3>
+          <h3 class="nav__name">Mustafa Arda Düşova</h3>
 
           <ul class="nav__list">
             <li class="nav__item">
@@ -155,11 +155,11 @@
       <!--==================== GİRİŞ BÖLÜMÜ ====================-->
       <section class="homepage section" id="homepage">
         <div class="homepage__container container grid">
-          <h1 class="homepage__name">Mustafa A. Dusova</h1>
+          <h1 class="homepage__name">Mustafa A. Düşova</h1>
 
           <div class="homepage__perfil">
             <div class="homepage__image">
-              <img src="https://mdusova.com/dosyalar/resimler/girisfotografi.webp" alt="Mustafa Arda Dusova" class="homepage__img"/>
+              <img src="https://mdusova.com/dosyalar/resimler/girisfotografi.webp" alt="Mustafa Arda Düşova" class="homepage__img"/>
               <div class="homepage__shadow"></div>
 
               <img src="https://mdusova.com/dosyalar/resimler/kavisliok.svg" alt="kavisliok" class="homepage__arrow"/>
@@ -185,7 +185,7 @@
 
           <div class="homepage__info">
             <p class="homepage__description">
-                I'm, Mustafa Arda Dusova, I work on <br><b>Graphic Design</b>,<br><b>Software Development</b>, <br><b>E-Commerce and Marketing</b><br>.
+                Welcome to my portfolio,<br> I work on <br><b>Graphic Design</b>,<br><b>Software Development</b>, <br><b>E-Commerce and Marketing</b>
             </p>
 
             <a href="#about" class="homepage__scroll">
@@ -206,7 +206,7 @@
 
           <div class="about__perfil">
             <div class="about__image">
-              <img src="https://mdusova.com/dosyalar/resimler/aboutfotografi.webp" alt="Mustafa Arda Dusova" class="about__img"/>
+              <img src="https://mdusova.com/dosyalar/resimler/hakkimdafotografi.webp" alt="Mustafa Arda Düşova" class="about__img"/>
               <div class="about__shadow"></div>
 
               <div class="geometric-box"></div>
@@ -217,7 +217,7 @@
 
           <div class="about__info">
             <p class="about__description">
-                I am Mustafa Arda Dusova, I grew up with computers. I have developed a deep passion for <br><b>software</b>, <b>graphic design</b> and <b>e-commerce</b>. I help brands stand out in the digital world by creating user-friendly software and impressive designs. I develop e-commerce platforms and create digital marketing strategies. I contribute to the growth of brands by providing technical and creative solutions in every project.            </p>
+                I am Mustafa Arda Düşova, I grew up with computers. I have developed a deep passion for <b>software development</b>, <b>graphic design</b> and <b>e-commerce & marketing</b>. I help brands stand out in the digital world by creating user-friendly software and impressive designs. I develop e-commerce platforms and create digital marketing strategies. I contribute to the growth of brands by providing technical and creative solutions in every project.            </p>
 
             <ul class="about__list">
               <li class="about__item">
@@ -382,7 +382,7 @@
           <span>My Projects</span>
         </h2>
       
-        <div class="projelerim__container container grid" id="projelerim-container">
+        <div class="projects__container container grid" id="projects-container">
           <!-- GitHub'dan alınan projeler buraya eklenecek -->
         </div>
       </section>
@@ -555,7 +555,7 @@
 
         <span class="footer__copy">
           Copyright &#169; 2024 
-          <a href="https://github.com/madtethys">Mustafa Arda Dusova</a> - All rights reserved.
+          <a href="https://github.com/madtethys">Mustafa Arda Düşova</a> - All rights reserved.
         </span>
       </div>
     </footer>
