İngilizce Dil Desteği Ekleme

--- a/en.html
+++ b/en.html
@@ -143,7 +143,7 @@
           <!-- DİL BUTONU -->
             <div class="lang-switch">
               <i class="ri-global-line">
-                <a href="https://mdusova.com/tr" class="nav__link">TR</a>
+                <a href="https://mdusova.com/" class="nav__link">TR</a>
               </i>
             </div>
         </div>
@@ -185,7 +185,7 @@
 
           <div class="homepage__info">
             <p class="homepage__description">
-                Welcome to my portfolio,<br> I work on <br><b>Graphic Design</b>,<br><b>Software Development</b>, <br><b>E-Commerce and Marketing</b>
+                I'm working on these<br><b>Graphic Design</b>,<br><b>Software Development</b>, <br><b>E-Commerce and Marketing</b>
             </p>
 
             <a href="#about" class="homepage__scroll">
