--- a/cuma/index.html
+++ b/cuma/index.html
@@ -303,7 +303,7 @@
     
     let isPlaying = false;
     const soundIcon = document.querySelector('.sound-icon');
-    const audio = new Audio('./geylani.mp3'); 
+    const audio = new Audio('https://github.com/dusova/benim-portfolyom/raw/refs/heads/main/cuma/geylani.mp3'); 
     audio.loop = true;
 
     function toggleSound() {
